--- a/.htaccess
+++ b/.htaccess
@@ -1,11 +1,2 @@
-RewriteEngine On
-ErrorDocument 403 error/403.php
-ErrorDocument 404 error/404.php
-
-RewriteCond %{THE_REQUEST} ^[A-Z]{3,9}\ /(([^/]+/)*([^/.]+))\.php[\ ?]
-RewriteRule \.php$ /%1/ [R=301,NC,L]
-RewriteRule ^(.*)/$ /$1.php [NC,L]
-
-RewriteCond %{THE_REQUEST} ^[A-Z]{3,9}\ /(([^/]+/)*([^/.]+))\.html[\ ?]
-RewriteRule \.php$ /%1/ [R=301,NC,L]
-RewriteRule ^(.*)/$ /$1.html [NC,L]
+ErrorDocument 403 /403.html
+ErrorDocument 404 /404.html
