--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,8 @@
 ErrorDocument 403 /403.html
 ErrorDocument 404 /404.html
+
+# File extension removing
+RewriteEngine on
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME}\.php -f
+RewriteRule ^(.*)$ $1.php [NC,L] 
