--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,6 @@
 ErrorDocument 403 /403.html
 ErrorDocument 404 /404.html
+ErrorDocument 500 /500.html
 
 # File extension removing
 RewriteEngine on
